--- a/JobAggregator/Dockerfile
+++ b/JobAggregator/Dockerfile
@@ -8,7 +8,15 @@ ENV PORT=10000
 
 WORKDIR /app
 
-COPY requirements.txt .
+RUN pip install --upgrade pip && \
+    pip install Django==5.2.7 \
+                gunicorn==21.2.0 \
+                psycopg2-binary==2.9.10 \
+                pillow==11.3.0 \
+                requests==2.32.5 \
+                beautifulsoup4==4.14.2 \
+                matplotlib==3.10.7 \
+                numpy==2.3.5
 
 RUN pip install --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
