--- a/JobAggregator/render.yaml
+++ b/JobAggregator/render.yaml
@@ -12,6 +12,8 @@ services:
       - key: SECRET_KEY
         generateValue: true
       - key: ALLOWED_HOSTS
-        value: "localhost,127.0.0.1,your-project.onrender.com"
+        value: "localhost,127.0.0.1,job-aggregator.onrender.com"
       - key: CSRF_TRUSTED_ORIGINS
-        value: "https://your-project.onrender.com"
+        value: "https://job-aggregator.onrender.com"
+      - key: PORT
+        value: "10000"
